--- a/01_CorporateStyleWebsite/index.html
+++ b/01_CorporateStyleWebsite/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <title>IT-Corporative</title>
 </head>
 <body>
     <header>
-        <h2 class="logo">Corporative</h2>
+        <h2 class="logo">IT Corporative</h2>
         <input type="checkbox" id="check">
         <label for="check" class="show-menu">&#8801</label>        
         <nav class="menu">
@@ -39,5 +41,52 @@
             <a href="#" class="button-more">More +</a>
         </div>
     </section>
+    <section id="icons">
+        <div class="content-icons">
+            <div>
+                <i class="material-icons">device_hub</i>
+                <h6>Networks</h6>
+                <p>Lorem ipsum dolor sit.</p>
+            </div>
+            <div>
+                <i class="material-icons">devices</i>
+                <h6>Responsive</h6>
+                <p>Lorem ipsum dolor sit.</p>
+            </div>
+            <div id="icon-api">
+                <i class="material-icons">api</i>
+                <h6>Api-Rest</h6>
+                <p>Lorem ipsum dolor sit.</p>
+            </div>
+        </div>
+        <div class="button-icons">
+            <a href="#" class="button-more-reverse">More +</a>
+        </div>
+    </section>
+    <section id="form">
+        <h4>Contact us</h4>
+        <form action="#">
+            <div class="data-form">
+                <div class="name">
+                    <label for="name">Name</label>
+                    <input type="text" name="name" id="name" placeholder="Name">
+                </div>
+                <div class="email">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" placeholder="Email">
+                </div>
+            </div>
+            <div class="message">
+                <label for="message">Message</label>
+                <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
+            </div>
+            <div class="button-form">
+                <a href="#" class="button-more">Send</a>
+            </div>
+        </form>
+    </section>
+    <footer>
+        <p>&copy;2022 WebResponsive</p>
+    </footer>
 </body>
 </html>
