--- a/02_OpticalStyleWebsite/index.html
+++ b/02_OpticalStyleWebsite/index.html
@@ -14,8 +14,8 @@
         <input type="checkbox" id="check">
         <label for="check" class="show-menu">&#8801</label>        
         <nav class="menu">
-            <a href="#">Lentes de sol</a>
-            <a href="#">Armazones de receta</a>
+            <a href="sunglasses.html">Lentes de sol</a>
+            <a href="frames.html">Armazones de receta</a>
             <a href="#">Contacto</a>
             <label for="check" class="hide-menu">&#215</label>
         </nav>
@@ -26,11 +26,11 @@
             <base href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/">
             <div id="slider">
             <figure>
-            <img src="austin-fireworks.jpg" alt>
-            <img src="taj-mahal_copy.jpg" alt>
-            <img src="ibiza.jpg" alt>
-            <img src="ankor-wat.jpg" alt>
-            <img src="austin-fireworks.jpg" alt>
+            <img src="https://gmo.cl/media/wysiwyg/CL_Banner-Promo-SOL.png" alt>
+            <img src="https://gmo.cl/media/wysiwyg/CL_Banner-Promo-Opticos.png" alt>
+            <img src="https://gmo.cl/media/wysiwyg/Banner-Promo-LC__CyberMonday_GMOCL.png" alt>
+            <img src="https://gmo.com.co/media/wysiwyg/banner_promo_537x235_NEW_BTS.jpg" alt>
+            <img src="https://gmo.com.ec/media/wysiwyg/DOF-Banner-Promo.jpg" alt>
             </figure>
             </div>
         </div>
@@ -63,7 +63,7 @@
                 <p>Descripción</p>
             </div> 
             <div class="conteiner-button">
-                <a href="#" class="button-more">Ver más +</a>
+                <a href="frames.html" class="button-more">Ver más +</a>
             </div>        
     </section>
 
@@ -94,7 +94,7 @@
                 <p>Descripción</p>
             </div> 
             <div class="conteiner-button">
-                <a href="#" class="button-more">Ver más +</a>
+                <a href="sunglasses.html" class="button-more">Ver más +</a>
             </div>        
     </section>
 
